# ardrone_autonomy

./: .gitignore  .travis.yml  CHANGELOG.rst  CMakeLists.txt  LICENSE  ParrotCopyrightAndDisclaimer.txt  ParrotLicense.txt  README.md  ardrone-sdk-navdata-file-gps.patch  ardrone.launch  ardrone_lib.patch  build_sdk.sh  contribution.html  index.html  index.md  mainpage.dox  manifest.xml  mkdocs.yml  package.xml  params.json  rosdoc.yaml  sdk.makefile
ARDroneLib/FFMPEG/: Makefile
ARDroneLib/Soft/: log
ARDroneLib/Soft/Common/: academy_common.h  ardrone_api.h  ardrone_common_config.h  at_msgs.h  at_msgs_ids.h  autoconf.h  config.h  config_keys.h  control_states.h  generated_custom.h  led_animation.h  navdata_common.h  navdata_keys.h  video_encapsulation.h  vision_common.h
ARDroneLib/VLIB/: video_codec.c  video_codec.h  video_controller.c  video_controller.h  video_dct.c  video_dct.h  video_gob.h  video_huffman.c  video_huffman.h  video_macroblock.c  video_macroblock.h  video_mem32.c  video_mem32.h  video_packetizer.c  video_packetizer.h  video_picture.c  video_picture.h  video_picture_defines.h  video_quantizer.c  video_quantizer.h
ARDroneLib/VLIB/Docs/: uvlc.txt
ARDroneLib/VLIB/P263/: p263_codec.c  p263_codec.h  p263_gob_layer.c  p263_huffman.c  p263_huffman.h  p263_layers.h  p263_mb_layer.c  p263_picture_layer.c
ARDroneLib/VLIB/P264/: p264.c  p264.h  p264_Qp.c  p264_Qp.h  p264_codec.c  p264_codec.h  p264_common.h  p264_gob_layer.c  p264_inter_mc.c  p264_inter_mc.h  p264_intra_pred.c  p264_intra_pred.h  p264_layers.h  p264_mb_layer.c  p264_merge.c  p264_merge.h  p264_picture_layer.c  p264_transform.c  p264_transform.h  p264_zigzag.c  p264_zigzag.h  video_p264.c  video_p264.h
ARDroneLib/VLIB/Platform/: video_config.h  video_utils.h
ARDroneLib/VLIB/Stages/: vlib_stage_decode.c  vlib_stage_decode.h  vlib_stage_encode.c  vlib_stage_encode.h
ARDroneLib/VLIB/UVLC/: uvlc.c  uvlc.h  uvlc_codec.c  uvlc_codec.h  uvlc_gob_layer.c  uvlc_layers.h  uvlc_mb_layer.c  uvlc_picture_layer.c
ARDroneLib/VLIB/Utils/: video_bin_dct.c  video_bin_dct.h
ARDroneLib/VP_SDK/ATcodec/: ATcodec.c  ATcodec.h  ATcodec_Buffer.c  ATcodec_Buffer.h  ATcodec_Error.h  ATcodec_Memory.c  ATcodec_Memory.h  ATcodec_Messages_ex.h  ATcodec_Sorted_List.c  ATcodec_Sorted_List.h  ATcodec_Tree.c  ATcodec_Tree.h  ATcodec_api.c  ATcodec_api.h
ARDroneLib/VP_SDK/VP_Api/: vp_api.c  vp_api.h  vp_api_config.h  vp_api_error.c  vp_api_error.h  vp_api_io_multi_stage.c  vp_api_io_multi_stage.h  vp_api_io_stage_selector.h  vp_api_picture.c  vp_api_picture.h  vp_api_stage.c  vp_api_stage.h  vp_api_supervisor.c  vp_api_supervisor.h  vp_api_thread_helper.c  vp_api_thread_helper.h
ARDroneLib/VP_SDK/VP_Com/: vp_com.h  vp_com_bluetooth.h  vp_com_error.c  vp_com_error.h  vp_com_serial.h  vp_com_socket.c  vp_com_socket.h  vp_com_socket_utils.c  vp_com_wifi.h  vp_com_wired.h
ARDroneLib/VP_SDK/VP_Os/: syslog.h  vp_os.h  vp_os_assert.h  vp_os_delay.h  vp_os_error_handling.c  vp_os_error_handling.h  vp_os_malloc.c  vp_os_malloc.h  vp_os_print.h  vp_os_rtmon.h  vp_os_signal.h  vp_os_thread.h  vp_os_types.h
ARDroneLib/VP_SDK/VP_Stages/: vp_stages_buffer_to_picture.c  vp_stages_buffer_to_picture.h  vp_stages_configs.c  vp_stages_configs.h  vp_stages_frame_pipe.c  vp_stages_frame_pipe.h  vp_stages_i_camif.h  vp_stages_io_buffer.c  vp_stages_io_buffer.h  vp_stages_io_com.c  vp_stages_io_com.h  vp_stages_io_console.c  vp_stages_io_console.h  vp_stages_io_file.c  vp_stages_io_file.h  vp_stages_o_sdl.c  vp_stages_o_sdl.h  vp_stages_yuv2rgb.c  vp_stages_yuv2rgb.h  (+1 more)
ARDroneSDK/: ardrone-sdk-navdata-common-gps.patch  ardrone-sdk-navdata-keys-gps.patch  ardrone_lib.patch
ardrone_autonomy/: CMakeLists.txt  README.md  mainpage.dox  package.xml  rosdep.yaml
ardrone_autonomy/data/camera_info/: ardrone_bottom.yaml  ardrone_bottom.yaml~  ardrone_front .yaml  ardrone_front .yaml~
ardrone_autonomy/docs/: FAQ.rst  Makefile  contributers.rst  reading.rst
ardrone_autonomy/include/ardrone_autonomy/: NavdataMessageDefinitions.h  ardrone_driver.h
ardrone_autonomy/launch/: ardrone.launch  ardrone.launch~  ardrone_aggressive.launch
ardrone_autonomy/msg/: matrix33.msg  navdata_pressure_raw.msg  navdata_wifi.msg  navdata_wind_speed.msg
ardrone_autonomy/scripts/: README.md
ardrone_autonomy/src/: ardrone_driver.cpp  ardrone_driver.cpp~
ardrone_autonomy/srv/: CamSelect.srv
config/: log710.yaml
data/camera_info/: ardrone_bottom.yaml  ardrone_front.yaml
docs/: FAQ.rst  commands.rst  conf.py  frames.rst  gps.rst  index.rst  installation.rst  license.rst  parameters.rst  reading.rst  run.rst  services.rst  usage.rst
include/ardrone_autonomy/: NavdataMessageDefinitions.h  ardrone_driver.h  ardrone_sdk.h  snippet_configure_drone.h  snippet_ros_to_ardrone_config.h  teleop_twist.h  video.h
launch/: ardrone.launch  ardrone_aggressive.launch  ardrone_group.launch  joy_teleop.launch
msg/: Navdata.msg  Navdata2.msg  navdata_adc_data_frame.msg  navdata_altitude.msg  navdata_camera_settings.msg  navdata_demo.msg  navdata_euler_angles.msg  navdata_games.msg  navdata_gps.msg  navdata_gps_channel.msg  navdata_gyros_offsets.msg  navdata_hdvideo_stream.msg  navdata_host.msg  navdata_kalman_pressure.msg  navdata_magneto.msg  navdata_phys_measures.msg  navdata_pressure_raw.msg  navdata_pwm.msg  navdata_raw_measures.msg  navdata_rc_references.msg  navdata_references.msg  navdata_time.msg  navdata_trackers_send.msg  navdata_trims.msg  navdata_video_stream.msg  navdata_vision.msg  navdata_vision_detect.msg  navdata_vision_of.msg  navdata_vision_perf.msg  navdata_vision_raw.msg  navdata_watchdog.msg  navdata_wifi.msg  navdata_wind_speed.msg  navdata_zimmu_3000.msg
scripts/: CreateNavdataFormat.py  NavdataMessageDefinitionsTemplate.c
src/: NavdataMessageDefinitions.h  ardrone_driver.cpp  ardrone_driver.h  ardrone_sdk.cpp  ardrone_sdk.h  teleop_twist.cpp  teleop_twist.h  video.cpp  video.h
src/examples/: control_leds.cpp  fly_from_joy.cpp  land.cpp  reset.cpp  takeoff.cpp  test_fly.cpp
srv/: FlightAnim.srv  HullSelect.srv  LedAnim.srv  SetGPSTarget.srv
(+269 files in other folders)
